--- a/lenses/templates/lenses/lens_make_private.html
+++ b/lenses/templates/lenses/lens_make_private.html
@@ -22,5 +22,8 @@ Make lenses private?
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Make private</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/lock-fill.svg' %}" alt="update">
+  Make private
+</button>
 {% endblock action_button %}
