--- a/lenses/templates/lenses/lens_resolve_duplicates.html
+++ b/lenses/templates/lenses/lens_resolve_duplicates.html
@@ -57,7 +57,9 @@
 
     <div>
       <label>Resolve duplicates and submit? </label>
-      <button type="submit" class="jb-submit-button-1">Submit</button>
+      <button type="submit" class="jb-submit-button-1">
+	Submit
+      </button>
     </div>
 
   </form>
