--- a/sled_band/templates/sled_band/band_create.html
+++ b/sled_band/templates/sled_band/band_create.html
@@ -37,5 +37,8 @@ Create new band?
 {% endblock content %}
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Create</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/plus.svg' %}" >
+  Create
+</button>
 {% endblock action_button %}
