--- a/sled_collections/templates/sled_collections/collection_ask_access.html
+++ b/sled_collections/templates/sled_collections/collection_ask_access.html
@@ -13,6 +13,7 @@ Ask private object owners for access?
 
   {% block action_button %}
   <button type="submit" class="jb-submit-button-1">
+    <img src="{% static 'icons/send-fill.svg' %}" >
     Ask access
   </button>
   {% endblock action_button %}
