--- a/sled_data/templates/sled_data/catalogue_create.html
+++ b/sled_data/templates/sled_data/catalogue_create.html
@@ -90,5 +90,8 @@ Add Catalogue data?
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Create Catalogue data</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/plus.svg' %}" >
+  Create Catalogue data
+</button>
 {% endblock action_button %}
