--- a/sled_data/templates/sled_data/data_update_many.html
+++ b/sled_data/templates/sled_data/data_update_many.html
@@ -192,7 +192,10 @@
 
 
       <div>
-        <button type="submit" class="jb-submit-button-1">Update</button>
+        <button type="submit" class="jb-submit-button-1">
+	  <img src="{% static 'icons/pencil.svg' %}" >
+	  Update
+	</button>
       </div>
     </form>
   </div>
