--- a/sled_data/templates/sled_data/imaging_create.html
+++ b/sled_data/templates/sled_data/imaging_create.html
@@ -80,5 +80,8 @@ Add Imaging data?
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Create Imaging data</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/plus.svg' %}" >
+  Create Imaging data
+</button>
 {% endblock action_button %}
