--- a/sled_data/templates/sled_data/imaging_update.html
+++ b/sled_data/templates/sled_data/imaging_update.html
@@ -40,5 +40,8 @@ Update Imaging data
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Update</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/pencil.svg' %}" >
+  Update
+</button>
 {% endblock action_button %}
