--- a/sled_data/templates/sled_data/spectrum_create.html
+++ b/sled_data/templates/sled_data/spectrum_create.html
@@ -85,5 +85,8 @@ Add Spectrum?
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Create Spectrum</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/plus.svg' %}" >
+  Create Spectrum
+</button>
 {% endblock action_button %}
