--- a/sled_groups/templates/sled_groups/group_ask_to_join.html
+++ b/sled_groups/templates/sled_groups/group_ask_to_join.html
@@ -32,5 +32,8 @@ Request to join group
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Send</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/send-fill.svg' %}" >
+  Send
+</button>
 {% endblock action_button %}
