--- a/sled_groups/templates/sled_groups/group_leave.html
+++ b/sled_groups/templates/sled_groups/group_leave.html
@@ -16,5 +16,8 @@ Leave group
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Leave</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/door-open-leave.svg' %}" >
+  Leave
+</button>
 {% endblock action_button %}
