--- a/sled_instrument/templates/sled_instrument/instrument_delete.html
+++ b/sled_instrument/templates/sled_instrument/instrument_delete.html
@@ -16,5 +16,8 @@ Delete instrument
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Delete</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/trash.svg' %}" >
+  Delete
+</button>
 {% endblock action_button %}
