--- a/sled_persistent_message/templates/sled_persistent_message/message_create.html
+++ b/sled_persistent_message/templates/sled_persistent_message/message_create.html
@@ -81,5 +81,8 @@ Add new Message?
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Create Message</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/plus.svg' %}" >
+  Create Message
+</button>
 {% endblock action_button %}
