--- a/sled_persistent_message/templates/sled_persistent_message/message_update.html
+++ b/sled_persistent_message/templates/sled_persistent_message/message_update.html
@@ -53,5 +53,8 @@ Update Message?
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Update Message</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/pencil.svg' %}" >
+  Update Message
+</button>
 {% endblock action_button %}
