--- a/sled_single_objects/templates/sled_single_objects/so_cede_ownership.html
+++ b/sled_single_objects/templates/sled_single_objects/so_cede_ownership.html
@@ -48,7 +48,10 @@ Cede ownership?
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Cede ownership</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/forward-fill.svg' %}" >
+  Cede ownership
+</button>
 {% endblock action_button %}
 
 
