--- a/sled_single_objects/templates/sled_single_objects/so_make_public.html
+++ b/sled_single_objects/templates/sled_single_objects/so_make_public.html
@@ -38,5 +38,8 @@ Make {% singular_or_plural form.obj_type.value items|length %} public?
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Make public</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/people-fill.svg' %}" >
+  Make public
+</button>
 {% endblock action_button %}
