--- a/lenses/templates/lenses/lens_delete.html
+++ b/lenses/templates/lenses/lens_delete.html
@@ -31,5 +31,8 @@ Delete {% singular_or_plural 'Lenses' lenses|length %}?
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Delete</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/trash.svg' %}" >
+  Delete
+</button>
 {% endblock action_button %}
