--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -27,7 +27,10 @@
             Created at: {{ lens.created_at }} by <a href="{{ lens.owner.get_absolute_url }}">{{ lens.owner }}</a>
 	    {% if lens.owner != user %}
 	    <a href="mailto:{{lens.owner.email}}?subject=Re:SLED lens {{ lens.name }}&body=The message">
-	      <button class="jb-submit-button-1">Contact</button>
+	      <button class="jb-submit-button-1">
+		<img src="{% static 'icons/send-fill.svg' %}" >
+		Contact
+	      </button>
 	    </a>
 	    {% endif %}
 	  </p>
@@ -122,7 +125,7 @@
       {% endfor %}
     </table>
     <button type="button" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_papers:paper-quick-query' %}">
-      <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
+      <img src="{% static 'icons/search.svg' %}" alt="pencil">
       Search paper
     </button>    
   </div>
@@ -147,13 +150,13 @@
 	      <img src="{{ image.image.url }}">
 	      <div class="overlay">
 		<button type="button" class="sled-modal jb-overlay-button-1" data-form-url="{% url 'sled_data:imaging-detail' image.id %}">
+		  <img src="{% static 'icons/eye-fill.svg' %}">
 		  View
-		  <img src="{% static 'icons/eye-fill.svg' %}" alt="view">
 		</button>
 		{% if image.owner == user %}
 		<button type="button" class="sled-modal jb-overlay-button-1" data-form-url="{% url 'sled_data:imaging-update' image.id %}">
+		  <img src="{% static 'icons/pencil.svg' %}">
 		  Update
-		  <img src="{% static 'icons/pencil.svg' %}" alt="update">
 		</button>	
 		{% endif %}
 	      </div>
@@ -165,7 +168,7 @@
       {% endfor %}
     </table>
     <button type="submit" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_data:imaging-create' lens=lens.id %}">
-      <img src="{% static 'icons/plus.svg' %}" alt="plus">
+      <img src="{% static 'icons/plus.svg' %}">
       Add Imaging data
     </button>
   </div>
@@ -184,13 +187,13 @@
 	<img src="{{ spec.image.url }}">
 	<div class="overlay">
 	  <button type="button" class="sled-modal jb-overlay-button-1" data-form-url="{% url 'sled_data:spectrum-detail' spec.id %}">
+	    <img src="{% static 'icons/eye-fill.svg' %}">
 	    View
-	    <img src="{% static 'icons/eye-fill.svg' %}" alt="view">
 	  </button>
 	  {% if spec.owner == user %}
 	  <button type="button" class="sled-modal jb-overlay-button-1" data-form-url="{% url 'sled_data:spectrum-update' spec.id %}">
+	    <img src="{% static 'icons/pencil.svg' %}">
 	    Update
-	    <img src="{% static 'icons/pencil.svg' %}" alt="update">
 	  </button>	
 	  {% endif %}
 	</div>
@@ -199,7 +202,7 @@
     {% endfor %}
     
     <button type="submit" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_data:spectrum-create' lens=lens.id %}">
-      <img src="{% static 'icons/plus.svg' %}" alt="plus">
+      <img src="{% static 'icons/plus.svg' %}">
       Add Spectrum
     </button>
   </div>
@@ -274,7 +277,7 @@
 
     <div>
       <button type="submit" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_data:catalogue-create' lens=lens.id %}">
-	<img src="{% static 'icons/plus.svg' %}" alt="plus">
+	<img src="{% static 'icons/plus.svg' %}">
 	Add Catalogue Entry
       </button>
     </div>
