--- a/lenses/templates/lenses/lens_make_collection.html
+++ b/lenses/templates/lenses/lens_make_collection.html
@@ -30,5 +30,8 @@ Make collection?
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Make collection</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/collection-fill.svg' %}">
+  Make collection
+</button>
 {% endblock action_button %}
