--- a/sled_collections/templates/sled_collections/collection_cede_ownership.html
+++ b/sled_collections/templates/sled_collections/collection_cede_ownership.html
@@ -33,7 +33,10 @@ Cede ownership of collection {{ collection.name }}?
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Cede ownership</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/forward-fill.svg' %}" >
+  Cede ownership
+</button>
 {% endblock action_button %}
 
 
