--- a/sled_groups/templates/sled_groups/group_delete.html
+++ b/sled_groups/templates/sled_groups/group_delete.html
@@ -13,5 +13,8 @@ Delete group
 {% endblock content %}
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Delete</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/trash.svg' %}" >
+  Delete
+</button>
 {% endblock action_button %}
