--- a/sled_groups/templates/sled_groups/group_split_list.html
+++ b/sled_groups/templates/sled_groups/group_split_list.html
@@ -36,7 +36,7 @@
   {% endif %}
 
   <button type="button" id="create-new-group" class="jb-submit-button-1" data-form-url="{% url 'sled_groups:group-create' %}">
-    <img src="{% static 'icons/folder-fill.svg' %}" alt="group">
+    <img src="{% static 'icons/plus.svg' %}">
     Create new group
   </button>
 </div>
