--- a/sled_instrument/templates/sled_instrument/instrument_create.html
+++ b/sled_instrument/templates/sled_instrument/instrument_create.html
@@ -33,5 +33,8 @@ Create new instrument?
 {% endblock content %}
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">Create</button>
+<button type="submit" class="jb-submit-button-1">
+  <img src="{% static 'icons/plus.svg' %}" >
+  Create
+</button>
 {% endblock action_button %}
