--- a/sled_tasks/templates/sled_tasks/task_list_recipient.html
+++ b/sled_tasks/templates/sled_tasks/task_list_recipient.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-<castro>
 <table>
   <thead>
     <tr>
@@ -10,7 +9,7 @@
       <th>From</th>
 
       {% if admin_page  %}
-        <th> Assigned to </th>
+      <th> Assigned to </th>
       {% endif %}
 
       <th></th>
@@ -18,77 +17,80 @@
   </thead>
   <tbody>
     {% for task in recipient %}
-        <tr>
-          <td>
-        	{% if task.status == "P" %}
-            	<span style="font-weight:bold;color:red">
-            	  {{ task.status }}
-            	</span>
+    <tr>
+      <td>
+        {% if task.status == "P" %}
+        <span style="font-weight:bold;color:red">
+          {{ task.status }}
+        </span>
 
-        	{% else %}
-            	<span style="font-weight:bold;color:green">
-            	  {{ task.status }}
-            	</span>
-        	{% endif %}
-              </td>
+        {% else %}
+        <span style="font-weight:bold;color:green">
+          {{ task.status }}
+        </span>
+        {% endif %}
+      </td>
 
-              <td>{{ task.task_type }}</td>
-              <td>{{ task.created_at }}</td>
-              <td>{{ task.owner }}</td>
+      <td>{{ task.task_type }}</td>
+      <td>{{ task.created_at }}</td>
+      <td>{{ task.owner }}</td>
 
-              {% if admin_page %}
-                  <td>
-                	{{ task.cargo.user_admin }}
-                  </td>
-              {% endif %}
+      {% if admin_page %}
+      <td>
+        {{ task.cargo.user_admin }}
+      </td>
+      {% endif %}
 
 
-               <td>
-            	{% if admin_page %}
-                	{% if task.status == 'C' %}
-                    	<button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-admin-recipient' task.id %}">
-                    	  <img src="{% static 'icons/eye-fill.svg' %}" alt="people">
-                    	  View
-                    	</button>
+      <td>
+        {% if admin_page %}
+        {% if task.status == 'C' %}
+        <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-admin-recipient' task.id %}">
+          <img src="{% static 'icons/eye-fill.svg' %}">
+          View
+        </button>
 
-                	{% else %}
-                    	{% if task.cargo.user_admin == request.user.username %}
-                        <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-admin-recipient' task.id %}">
-                        	  <img src="{% static 'icons/pencil.svg' %}" alt="people">
-                        	  Respond
-                        	</button>
-                	    {% endif %}
-            	    {% endif %}
-            	
-            	{% else %}
-                	
-                	  {% if task.status == 'C' %}
-                      <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-recipient' task.id %}">
-                	       <img src="{% static 'icons/eye-fill.svg' %}" alt="people">
-                	        View
+        {% else %}
+        {% if task.cargo.user_admin == request.user.username %}
+        <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-admin-recipient' task.id %}">
+          <img src="{% static 'icons/send-fill.svg' %}">
+          Respond
+        </button>
+        {% endif %}
+        {% endif %}
+        
+        {% else %}
+        
+        {% if task.status == 'C' %}
+	<button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-recipient' task.id %}">
+          <img src="{% static 'icons/eye-fill.svg' %}">
+          View
+        </button>
 
-                	  {% else %}
-                        {% if task.owner == request.user %}
-                            <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-owner' task.id %}">
-                            <img src="{% static 'icons/eye-fill.svg' %}" alt="people">
-                           View
-                        {% else %}
-                        <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-recipient' task.id %}">
-                           <img src="{% static 'icons/pencil.svg' %}" alt="people">
-                            Respond
-                        {% endif %}
-                	  {% endif %}
-                	</button>
-
-            	{% endif %}
-
-              </td>
-           
-            </tr>
-            {% empty %}
-            <tr>
-          <td colspan="5">No tasks</td>
-        </tr>
+        {% else %}
+        {% if task.owner == request.user %}
+        <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-owner' task.id %}">
+          <img src="{% static 'icons/eye-fill.svg' %}">
+          View
+	</button>
+        {% else %}
+        <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-recipient' task.id %}">
+          <img src="{% static 'icons/send-fill.svg' %}">
+          Respond
+	</button>
+	
+        {% endif %}
+        {% endif %}
+	
+        {% endif %}
+	
+      </td>
+      
+    </tr>
+    {% empty %}
+    <tr>
+      <td colspan="5">No tasks</td>
+    </tr>
     {% endfor %}
   </tbody>
 </table>
