--- a/static/css/jb_style.css
+++ b/static/css/jb_style.css
@@ -371,6 +371,9 @@ table td {
     font-size: 14px;
     border-radius: 12px;
 }
+.jb-submit-button-1 img {
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(129deg) brightness(106%) contrast(104%);
+}
 
 .jb-submit-button-red {
     position: static;
@@ -568,5 +571,31 @@ ul.jb-select-radio {
     width: 90%;
    max-width:1200px;
   }
+}
+
+.filter-info {
+    filter: invert(100%) sepia(25%) saturate(6440%) hue-rotate(175deg) brightness(99%) contrast(105%);
+}
+.filter-success {
+    filter: invert(95%) sepia(6%) saturate(576%) hue-rotate(80deg) brightness(101%) contrast(87%);
+}
+.filter-error {
+    filter: invert(84%) sepia(20%) saturate(237%) hue-rotate(306deg) brightness(102%) contrast(95%);
+}
+.filter-warning {
+    filter: invert(85%) sepia(12%) saturate(615%) hue-rotate(346deg) brightness(111%) contrast(102%);
+}
+
+.filter-info2 {
+    filter: invert(29%) sepia(60%) saturate(2952%) hue-rotate(200deg) brightness(103%) contrast(107%);
+}
+.filter-success2 {
+    filter: invert(43%) sepia(97%) saturate(412%) hue-rotate(81deg) brightness(101%) contrast(82%);
+}
+.filter-error2 {
+    filter: invert(29%) sepia(94%) saturate(1345%) hue-rotate(329deg) brightness(90%) contrast(92%);
+}
+.filter-warning2 {
+    filter: invert(82%) sepia(53%) saturate(2355%) hue-rotate(351deg) brightness(100%) contrast(104%);
 }
 
